# Gctk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
generators/colours/: .gitignore  Program.cs  colours.sln
include/: gctk.hpp  gctk_common.hpp  gctk_debug.hpp  gctk_gtex.hpp  gctk_mesh.hpp  gctk_shader.hpp  gctk_string.hpp  gctk_texture.hpp
include/gtex/: gctk_gtex.hpp
include/math/: gctk_math.hpp
include/strlib/: date.hpp  io.hpp  string.hpp
src/: gctk.cpp  gctk_debug.cpp  gctk_mesh.cpp  gctk_shader.cpp  gctk_string.cpp  gctk_texture.cpp
src/gtex/: gctk_gtex.cpp
src/math/: gctk_math.cpp
src/string/: date.cpp  io.cpp  string.cpp
test/: main.cpp
